added code to the HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,44 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section" >
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>Inside the body element there is a header element, which contains the content that will display at the top of the page. Useful for adding an image and an H1 Heading to use as a title.</li>
+          <li>Inside the body element is a main element as well, which contains the rest of the page content, including different sections (also an element) of the page.</li>
+          <li>It is important to use Semantic HTML as much as possible since it is more clear to the user/reader of the page for what they are interacting with. </li>
+          <li>HTML sets up the structure and organization of the page, leaving room for CSS and Javascript to then style (CSS) and give the page function (Javascript).</li>
+        </ul>
+      </section>
+      
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git checkout main: switches to main branch in the repo on GitHub</li>
+          <li>git add -A: stages the changes made to the file in the branch; commits all files in the working branch </li>
+          <li>git commit -m "added code to HTML file": adds a comment/message to be associated with the commit</li>
+          <li>git pull origin main: pulls the main branch file/code so that we can access it for comparison and make sure it is up to date</li>
+          <li>git push origin feature/add-html: this pushes the branch to GitHub so that it can be reviewed and merged into the main branch.</li>
+        </ul>
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
